# IMPI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  QUICK_START.txt  README.md  RUNNING_THE_PROJECT.md  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start-app.bat  start-app.ps1  stop-app.bat  stop-app.ps1  test-paths.ps1  vercel-build.js  vercel.json
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: ci.yml  e2e.yml  python-test.yml
app/: __init__.py  api.py  audio_processor.py  auth.py  authz.py  brute_force_protection.py  config.py  db_mongo.py  error_codes.py  logging_config.py  nlp_analyzer.py  password_policy.py  secrets_loader.py  speech_to_text.py
data/: meetings.db.backup_20251002_121614
data/transcripts/: one_hour_meeting.txt  one_hour_snippet.txt
docs/: COOKIE_AUTH_MIGRATION.md  CORS_CONFIGURATION.md  SECRETS_MANAGEMENT.md
frontend/: .env.example  .eslintrc.json  .prettierignore  babel.config.js  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  test-setup.js  vite.config.js
frontend/e2e/: accessibility.spec.js  auth.spec.js  helpers.js  rbac.spec.js  token_refresh.spec.js
frontend/src/: App.jsx  AppRouter.jsx  index.css  main.jsx
frontend/src/__tests__/: App.test.jsx
tests/: conftest.py  test_database.py
tools/: check_stt.py  extract_pdf_text.py  gen_long_transcript.py  mongo_backup.py  reset_passwords.py  seed_test_users.py  tail_log.ps1  test_backend_e2e.py  test_http_login.py  verify_login.py  verify_optimize_indexes.py  watch_log.ps1
(+37 files in other folders)
